Segunda_Entrega/y.output
Terminals unused in grammar

   FOR
   TO
   DO
   ENDFOR
   CAR_PUNTO
   LONG
   IN


Estado 51 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 $@1: /* vacío */

    2 programa: PROGRAM $@1 est_declaracion algoritmo

    3 $@2: /* vacío */

    4 est_declaracion: DECVAR $@2 declaraciones ENDDEC

    5 $@3: /* vacío */

    6 est_declaracion: DEFVAR $@3 declaraciones ENDDEF

    7 declaraciones: declaracion
    8              | declaraciones declaracion

    9 declaracion: lista_var OP_DOSP REAL
   10            | lista_var OP_DOSP STRING
   11            | lista_var OP_DOSP INTEGER

   12 lista_var: ID
   13          | lista_var CAR_COMA ID

   14 $@4: /* vacío */

   15 algoritmo: BEGINP $@4 bloque ENDP

   16 bloque: sentencia
   17       | bloque sentencia

   18 sentencia: ciclo
   19          | seleccion
   20          | asignacion
   21          | entrada_salida
   22          | between

   23 $@5: /* vacío */

   24 ciclo: REPEAT $@5 bloque UNTIL condicion

   25 $@6: /* vacío */

   26 ciclo: WHILE $@6 CAR_PA condicion CAR_PC bloque ENDW

   27 $@7: /* vacío */

   28 asignacion: lista_id OP_ASIG $@7 expresion

   29 lista_id: lista_id OP_ASIG ID
   30         | ID

   31 $@8: /* vacío */

   32 entrada_salida: READ $@8 ID

   33 $@9: /* vacío */

   34 entrada_salida: WRITE $@9 ID

   35 $@10: /* vacío */

   36 entrada_salida: WRITE $@10 CONST_STR

   37 seleccion: IF CAR_PA condicion CAR_PC THEN bloque ENDIF
   38          | IF CAR_PA condicion CAR_PC THEN bloque ELSE bloque ENDIF

   39 condicion: comparacion
   40          | OP_NOT comparacion
   41          | comparacion OP_AND comparacion
   42          | comparacion OP_OR comparacion

   43 $@11: /* vacío */

   44 condicion: OP_NOT CAR_PA comparacion $@11 OP_AND comparacion CAR_PC

   45 $@12: /* vacío */

   46 condicion: OP_NOT CAR_PA comparacion $@12 OP_OR comparacion CAR_PC
   47          | between
   48          | OP_NOT between

   49 $@13: /* vacío */

   50 comparacion: expresion OP_COMPARACION $@13 expresion

   51 expresion: termino

   52 $@14: /* vacío */

   53 expresion: expresion OP_SUM $@14 termino

   54 $@15: /* vacío */

   55 expresion: expresion OP_RES $@15 termino

   56 between: BETWEEN CAR_PA ID CAR_COMA CAR_CA expresion CAR_PYC expresion CAR_CC CAR_PC

   57 termino: factor

   58 $@16: /* vacío */

   59 termino: termino OP_MUL $@16 factor

   60 $@17: /* vacío */

   61 termino: termino OP_DIV $@17 factor

   62 factor: ID
   63       | CONST_INT
   64       | CONST_REAL
   65       | CONST_STR
   66       | CAR_PA expresion CAR_PC


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 12 13 29 30 32 34 56 62
CONST_INT (259) 63
CONST_STR (260) 36 65
CONST_REAL (261) 64
PROGRAM (262) 2
DECVAR (263) 4
ENDDEC (264) 4
DEFVAR (265) 6
ENDDEF (266) 6
REAL (267) 9
INTEGER (268) 11
STRING (269) 10
BEGINP (270) 15
ENDP (271) 15
IF (272) 37 38
THEN (273) 37 38
ELSE (274) 38
ENDIF (275) 37 38
FOR (276)
TO (277)
DO (278)
ENDFOR (279)
WHILE (280) 26
ENDW (281) 26
REPEAT (282) 24
UNTIL (283) 24
OP_AND (284) 41 44
OP_OR (285) 42 46
OP_NOT (286) 40 44 46 48
OP_COMPARACION (287) 50
OP_ASIG (288) 28 29
OP_DOSP (289) 9 10 11
OP_SUM (290) 53
OP_RES (291) 55
OP_MUL (292) 59
OP_DIV (293) 61
CAR_COMA (294) 13 56
CAR_PUNTO (295)
CAR_PYC (296) 56
CAR_PA (297) 26 37 38 44 46 56 66
CAR_PC (298) 26 37 38 44 46 56 66
CAR_CA (299) 56
CAR_CC (300) 56
LONG (301)
BETWEEN (302) 56
IN (303)
WRITE (304) 34 36
READ (305) 32


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
programa (52)
    en la izquierda: 2, en la derecha: 0
$@1 (53)
    en la izquierda: 1, en la derecha: 2
est_declaracion (54)
    en la izquierda: 4 6, en la derecha: 2
$@2 (55)
    en la izquierda: 3, en la derecha: 4
$@3 (56)
    en la izquierda: 5, en la derecha: 6
declaraciones (57)
    en la izquierda: 7 8, en la derecha: 4 6 8
declaracion (58)
    en la izquierda: 9 10 11, en la derecha: 7 8
lista_var (59)
    en la izquierda: 12 13, en la derecha: 9 10 11 13
algoritmo (60)
    en la izquierda: 15, en la derecha: 2
$@4 (61)
    en la izquierda: 14, en la derecha: 15
bloque (62)
    en la izquierda: 16 17, en la derecha: 15 17 24 26 37 38
sentencia (63)
    en la izquierda: 18 19 20 21 22, en la derecha: 16 17
ciclo (64)
    en la izquierda: 24 26, en la derecha: 18
$@5 (65)
    en la izquierda: 23, en la derecha: 24
$@6 (66)
    en la izquierda: 25, en la derecha: 26
asignacion (67)
    en la izquierda: 28, en la derecha: 20
$@7 (68)
    en la izquierda: 27, en la derecha: 28
lista_id (69)
    en la izquierda: 29 30, en la derecha: 28 29
entrada_salida (70)
    en la izquierda: 32 34 36, en la derecha: 21
$@8 (71)
    en la izquierda: 31, en la derecha: 32
$@9 (72)
    en la izquierda: 33, en la derecha: 34
$@10 (73)
    en la izquierda: 35, en la derecha: 36
seleccion (74)
    en la izquierda: 37 38, en la derecha: 19
condicion (75)
    en la izquierda: 39 40 41 42 44 46 47 48, en la derecha: 24 26
    37 38
$@11 (76)
    en la izquierda: 43, en la derecha: 44
$@12 (77)
    en la izquierda: 45, en la derecha: 46
comparacion (78)
    en la izquierda: 50, en la derecha: 39 40 41 42 44 46
$@13 (79)
    en la izquierda: 49, en la derecha: 50
expresion (80)
    en la izquierda: 51 53 55, en la derecha: 28 50 53 55 56 66
$@14 (81)
    en la izquierda: 52, en la derecha: 53
$@15 (82)
    en la izquierda: 54, en la derecha: 55
between (83)
    en la izquierda: 56, en la derecha: 22 47 48
termino (84)
    en la izquierda: 57 59 61, en la derecha: 51 53 55 59 61
$@16 (85)
    en la izquierda: 58, en la derecha: 59
$@17 (86)
    en la izquierda: 60, en la derecha: 61
factor (87)
    en la izquierda: 62 63 64 65 66, en la derecha: 57 59 61


estado 0

    0 $accept: . programa $end

    PROGRAM  desplazar e ir al estado 1

    programa  ir al estado 2


estado 1

    2 programa: PROGRAM . $@1 est_declaracion algoritmo

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


estado 3

    2 programa: PROGRAM $@1 . est_declaracion algoritmo

    DECVAR  desplazar e ir al estado 5
    DEFVAR  desplazar e ir al estado 6

    est_declaracion  ir al estado 7


estado 4

    0 $accept: programa $end .

    $default  aceptar


estado 5

    4 est_declaracion: DECVAR . $@2 declaraciones ENDDEC

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 8


estado 6

    6 est_declaracion: DEFVAR . $@3 declaraciones ENDDEF

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 9


estado 7

    2 programa: PROGRAM $@1 est_declaracion . algoritmo

    BEGINP  desplazar e ir al estado 10

    algoritmo  ir al estado 11


estado 8

    4 est_declaracion: DECVAR $@2 . declaraciones ENDDEC

    ID  desplazar e ir al estado 12

    declaraciones  ir al estado 13
    declaracion    ir al estado 14
    lista_var      ir al estado 15


estado 9

    6 est_declaracion: DEFVAR $@3 . declaraciones ENDDEF

    ID  desplazar e ir al estado 12

    declaraciones  ir al estado 16
    declaracion    ir al estado 14
    lista_var      ir al estado 15


estado 10

   15 algoritmo: BEGINP . $@4 bloque ENDP

    $default  reduce usando la regla 14 ($@4)

    $@4  ir al estado 17


estado 11

    2 programa: PROGRAM $@1 est_declaracion algoritmo .

    $default  reduce usando la regla 2 (programa)


estado 12

   12 lista_var: ID .

    $default  reduce usando la regla 12 (lista_var)


estado 13

    4 est_declaracion: DECVAR $@2 declaraciones . ENDDEC
    8 declaraciones: declaraciones . declaracion

    ID      desplazar e ir al estado 12
    ENDDEC  desplazar e ir al estado 18

    declaracion  ir al estado 19
    lista_var    ir al estado 15


estado 14

    7 declaraciones: declaracion .

    $default  reduce usando la regla 7 (declaraciones)


estado 15

    9 declaracion: lista_var . OP_DOSP REAL
   10            | lista_var . OP_DOSP STRING
   11            | lista_var . OP_DOSP INTEGER
   13 lista_var: lista_var . CAR_COMA ID

    OP_DOSP   desplazar e ir al estado 20
    CAR_COMA  desplazar e ir al estado 21


estado 16

    6 est_declaracion: DEFVAR $@3 declaraciones . ENDDEF
    8 declaraciones: declaraciones . declaracion

    ID      desplazar e ir al estado 12
    ENDDEF  desplazar e ir al estado 22

    declaracion  ir al estado 19
    lista_var    ir al estado 15


estado 17

   15 algoritmo: BEGINP $@4 . bloque ENDP

    ID       desplazar e ir al estado 23
    IF       desplazar e ir al estado 24
    WHILE    desplazar e ir al estado 25
    REPEAT   desplazar e ir al estado 26
    BETWEEN  desplazar e ir al estado 27
    WRITE    desplazar e ir al estado 28
    READ     desplazar e ir al estado 29

    bloque          ir al estado 30
    sentencia       ir al estado 31
    ciclo           ir al estado 32
    asignacion      ir al estado 33
    lista_id        ir al estado 34
    entrada_salida  ir al estado 35
    seleccion       ir al estado 36
    between         ir al estado 37


estado 18

    4 est_declaracion: DECVAR $@2 declaraciones ENDDEC .

    $default  reduce usando la regla 4 (est_declaracion)


estado 19

    8 declaraciones: declaraciones declaracion .

    $default  reduce usando la regla 8 (declaraciones)


estado 20

    9 declaracion: lista_var OP_DOSP . REAL
   10            | lista_var OP_DOSP . STRING
   11            | lista_var OP_DOSP . INTEGER

    REAL     desplazar e ir al estado 38
    INTEGER  desplazar e ir al estado 39
    STRING   desplazar e ir al estado 40


estado 21

   13 lista_var: lista_var CAR_COMA . ID

    ID  desplazar e ir al estado 41


estado 22

    6 est_declaracion: DEFVAR $@3 declaraciones ENDDEF .

    $default  reduce usando la regla 6 (est_declaracion)


estado 23

   30 lista_id: ID .

    $default  reduce usando la regla 30 (lista_id)


estado 24

   37 seleccion: IF . CAR_PA condicion CAR_PC THEN bloque ENDIF
   38          | IF . CAR_PA condicion CAR_PC THEN bloque ELSE bloque ENDIF

    CAR_PA  desplazar e ir al estado 42


estado 25

   26 ciclo: WHILE . $@6 CAR_PA condicion CAR_PC bloque ENDW

    $default  reduce usando la regla 25 ($@6)

    $@6  ir al estado 43


estado 26

   24 ciclo: REPEAT . $@5 bloque UNTIL condicion

    $default  reduce usando la regla 23 ($@5)

    $@5  ir al estado 44


estado 27

   56 between: BETWEEN . CAR_PA ID CAR_COMA CAR_CA expresion CAR_PYC expresion CAR_CC CAR_PC

    CAR_PA  desplazar e ir al estado 45


estado 28

   34 entrada_salida: WRITE . $@9 ID
   36               | WRITE . $@10 CONST_STR

    CONST_STR  reduce usando la regla 35 ($@10)
    $default   reduce usando la regla 33 ($@9)

    $@9   ir al estado 46
    $@10  ir al estado 47


estado 29

   32 entrada_salida: READ . $@8 ID

    $default  reduce usando la regla 31 ($@8)

    $@8  ir al estado 48


estado 30

   15 algoritmo: BEGINP $@4 bloque . ENDP
   17 bloque: bloque . sentencia

    ID       desplazar e ir al estado 23
    ENDP     desplazar e ir al estado 49
    IF       desplazar e ir al estado 24
    WHILE    desplazar e ir al estado 25
    REPEAT   desplazar e ir al estado 26
    BETWEEN  desplazar e ir al estado 27
    WRITE    desplazar e ir al estado 28
    READ     desplazar e ir al estado 29

    sentencia       ir al estado 50
    ciclo           ir al estado 32
    asignacion      ir al estado 33
    lista_id        ir al estado 34
    entrada_salida  ir al estado 35
    seleccion       ir al estado 36
    between         ir al estado 37


estado 31

   16 bloque: sentencia .

    $default  reduce usando la regla 16 (bloque)


estado 32

   18 sentencia: ciclo .

    $default  reduce usando la regla 18 (sentencia)


estado 33

   20 sentencia: asignacion .

    $default  reduce usando la regla 20 (sentencia)


estado 34

   28 asignacion: lista_id . OP_ASIG $@7 expresion
   29 lista_id: lista_id . OP_ASIG ID

    OP_ASIG  desplazar e ir al estado 51


estado 35

   21 sentencia: entrada_salida .

    $default  reduce usando la regla 21 (sentencia)


estado 36

   19 sentencia: seleccion .

    $default  reduce usando la regla 19 (sentencia)


estado 37

   22 sentencia: between .

    $default  reduce usando la regla 22 (sentencia)


estado 38

    9 declaracion: lista_var OP_DOSP REAL .

    $default  reduce usando la regla 9 (declaracion)


estado 39

   11 declaracion: lista_var OP_DOSP INTEGER .

    $default  reduce usando la regla 11 (declaracion)


estado 40

   10 declaracion: lista_var OP_DOSP STRING .

    $default  reduce usando la regla 10 (declaracion)


estado 41

   13 lista_var: lista_var CAR_COMA ID .

    $default  reduce usando la regla 13 (lista_var)


estado 42

   37 seleccion: IF CAR_PA . condicion CAR_PC THEN bloque ENDIF
   38          | IF CAR_PA . condicion CAR_PC THEN bloque ELSE bloque ENDIF

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    OP_NOT      desplazar e ir al estado 56
    CAR_PA      desplazar e ir al estado 57
    BETWEEN     desplazar e ir al estado 27

    condicion    ir al estado 58
    comparacion  ir al estado 59
    expresion    ir al estado 60
    between      ir al estado 61
    termino      ir al estado 62
    factor       ir al estado 63


estado 43

   26 ciclo: WHILE $@6 . CAR_PA condicion CAR_PC bloque ENDW

    CAR_PA  desplazar e ir al estado 64


estado 44

   24 ciclo: REPEAT $@5 . bloque UNTIL condicion

    ID       desplazar e ir al estado 23
    IF       desplazar e ir al estado 24
    WHILE    desplazar e ir al estado 25
    REPEAT   desplazar e ir al estado 26
    BETWEEN  desplazar e ir al estado 27
    WRITE    desplazar e ir al estado 28
    READ     desplazar e ir al estado 29

    bloque          ir al estado 65
    sentencia       ir al estado 31
    ciclo           ir al estado 32
    asignacion      ir al estado 33
    lista_id        ir al estado 34
    entrada_salida  ir al estado 35
    seleccion       ir al estado 36
    between         ir al estado 37


estado 45

   56 between: BETWEEN CAR_PA . ID CAR_COMA CAR_CA expresion CAR_PYC expresion CAR_CC CAR_PC

    ID  desplazar e ir al estado 66


estado 46

   34 entrada_salida: WRITE $@9 . ID

    ID  desplazar e ir al estado 67


estado 47

   36 entrada_salida: WRITE $@10 . CONST_STR

    CONST_STR  desplazar e ir al estado 68


estado 48

   32 entrada_salida: READ $@8 . ID

    ID  desplazar e ir al estado 69


estado 49

   15 algoritmo: BEGINP $@4 bloque ENDP .

    $default  reduce usando la regla 15 (algoritmo)


estado 50

   17 bloque: bloque sentencia .

    $default  reduce usando la regla 17 (bloque)


estado 51

   28 asignacion: lista_id OP_ASIG . $@7 expresion
   29 lista_id: lista_id OP_ASIG . ID

    ID  desplazar e ir al estado 70

    ID        [reduce usando la regla 27 ($@7)]
    $default  reduce usando la regla 27 ($@7)

    $@7  ir al estado 71


estado 52

   62 factor: ID .

    $default  reduce usando la regla 62 (factor)


estado 53

   63 factor: CONST_INT .

    $default  reduce usando la regla 63 (factor)


estado 54

   65 factor: CONST_STR .

    $default  reduce usando la regla 65 (factor)


estado 55

   64 factor: CONST_REAL .

    $default  reduce usando la regla 64 (factor)


estado 56

   40 condicion: OP_NOT . comparacion
   44          | OP_NOT . CAR_PA comparacion $@11 OP_AND comparacion CAR_PC
   46          | OP_NOT . CAR_PA comparacion $@12 OP_OR comparacion CAR_PC
   48          | OP_NOT . between

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 72
    BETWEEN     desplazar e ir al estado 27

    comparacion  ir al estado 73
    expresion    ir al estado 60
    between      ir al estado 74
    termino      ir al estado 62
    factor       ir al estado 63


estado 57

   66 factor: CAR_PA . expresion CAR_PC

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 57

    expresion  ir al estado 75
    termino    ir al estado 62
    factor     ir al estado 63


estado 58

   37 seleccion: IF CAR_PA condicion . CAR_PC THEN bloque ENDIF
   38          | IF CAR_PA condicion . CAR_PC THEN bloque ELSE bloque ENDIF

    CAR_PC  desplazar e ir al estado 76


estado 59

   39 condicion: comparacion .
   41          | comparacion . OP_AND comparacion
   42          | comparacion . OP_OR comparacion

    OP_AND  desplazar e ir al estado 77
    OP_OR   desplazar e ir al estado 78

    $default  reduce usando la regla 39 (condicion)


estado 60

   50 comparacion: expresion . OP_COMPARACION $@13 expresion
   53 expresion: expresion . OP_SUM $@14 termino
   55          | expresion . OP_RES $@15 termino

    OP_COMPARACION  desplazar e ir al estado 79
    OP_SUM          desplazar e ir al estado 80
    OP_RES          desplazar e ir al estado 81


estado 61

   47 condicion: between .

    $default  reduce usando la regla 47 (condicion)


estado 62

   51 expresion: termino .
   59 termino: termino . OP_MUL $@16 factor
   61        | termino . OP_DIV $@17 factor

    OP_MUL  desplazar e ir al estado 82
    OP_DIV  desplazar e ir al estado 83

    $default  reduce usando la regla 51 (expresion)


estado 63

   57 termino: factor .

    $default  reduce usando la regla 57 (termino)


estado 64

   26 ciclo: WHILE $@6 CAR_PA . condicion CAR_PC bloque ENDW

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    OP_NOT      desplazar e ir al estado 56
    CAR_PA      desplazar e ir al estado 57
    BETWEEN     desplazar e ir al estado 27

    condicion    ir al estado 84
    comparacion  ir al estado 59
    expresion    ir al estado 60
    between      ir al estado 61
    termino      ir al estado 62
    factor       ir al estado 63


estado 65

   17 bloque: bloque . sentencia
   24 ciclo: REPEAT $@5 bloque . UNTIL condicion

    ID       desplazar e ir al estado 23
    IF       desplazar e ir al estado 24
    WHILE    desplazar e ir al estado 25
    REPEAT   desplazar e ir al estado 26
    UNTIL    desplazar e ir al estado 85
    BETWEEN  desplazar e ir al estado 27
    WRITE    desplazar e ir al estado 28
    READ     desplazar e ir al estado 29

    sentencia       ir al estado 50
    ciclo           ir al estado 32
    asignacion      ir al estado 33
    lista_id        ir al estado 34
    entrada_salida  ir al estado 35
    seleccion       ir al estado 36
    between         ir al estado 37


estado 66

   56 between: BETWEEN CAR_PA ID . CAR_COMA CAR_CA expresion CAR_PYC expresion CAR_CC CAR_PC

    CAR_COMA  desplazar e ir al estado 86


estado 67

   34 entrada_salida: WRITE $@9 ID .

    $default  reduce usando la regla 34 (entrada_salida)


estado 68

   36 entrada_salida: WRITE $@10 CONST_STR .

    $default  reduce usando la regla 36 (entrada_salida)


estado 69

   32 entrada_salida: READ $@8 ID .

    $default  reduce usando la regla 32 (entrada_salida)


estado 70

   29 lista_id: lista_id OP_ASIG ID .

    $default  reduce usando la regla 29 (lista_id)


estado 71

   28 asignacion: lista_id OP_ASIG $@7 . expresion

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 57

    expresion  ir al estado 87
    termino    ir al estado 62
    factor     ir al estado 63


estado 72

   44 condicion: OP_NOT CAR_PA . comparacion $@11 OP_AND comparacion CAR_PC
   46          | OP_NOT CAR_PA . comparacion $@12 OP_OR comparacion CAR_PC
   66 factor: CAR_PA . expresion CAR_PC

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 57

    comparacion  ir al estado 88
    expresion    ir al estado 89
    termino      ir al estado 62
    factor       ir al estado 63


estado 73

   40 condicion: OP_NOT comparacion .

    $default  reduce usando la regla 40 (condicion)


estado 74

   48 condicion: OP_NOT between .

    $default  reduce usando la regla 48 (condicion)


estado 75

   53 expresion: expresion . OP_SUM $@14 termino
   55          | expresion . OP_RES $@15 termino
   66 factor: CAR_PA expresion . CAR_PC

    OP_SUM  desplazar e ir al estado 80
    OP_RES  desplazar e ir al estado 81
    CAR_PC  desplazar e ir al estado 90


estado 76

   37 seleccion: IF CAR_PA condicion CAR_PC . THEN bloque ENDIF
   38          | IF CAR_PA condicion CAR_PC . THEN bloque ELSE bloque ENDIF

    THEN  desplazar e ir al estado 91


estado 77

   41 condicion: comparacion OP_AND . comparacion

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 57

    comparacion  ir al estado 92
    expresion    ir al estado 60
    termino      ir al estado 62
    factor       ir al estado 63


estado 78

   42 condicion: comparacion OP_OR . comparacion

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    CAR_PA      desplazar e ir al estado 57

    comparacion  ir al estado 93
    expresion    ir al estado 60
    termino      ir al estado 62
    factor       ir al estado 63


estado 79

   50 comparacion: expresion OP_COMPARACION . $@13 expresion

    $default  reduce usando la regla 49 ($@13)

    $@13  ir al estado 94


estado 80

   53 expresion: expresion OP_SUM . $@14 termino

    $default  reduce usando la regla 52 ($@14)

    $@14  ir al estado 95


estado 81

   55 expresion: expresion OP_RES . $@15 termino

    $default  reduce usando la regla 54 ($@15)

    $@15  ir al estado 96


estado 82

   59 termino: termino OP_MUL . $@16 factor

    $default  reduce usando la regla 58 ($@16)

    $@16  ir al estado 97


estado 83

   61 termino: termino OP_DIV . $@17 factor

    $default  reduce usando la regla 60 ($@17)

    $@17  ir al estado 98


estado 84

   26 ciclo: WHILE $@6 CAR_PA condicion . CAR_PC bloque ENDW

    CAR_PC  desplazar e ir al estado 99


estado 85

   24 ciclo: REPEAT $@5 bloque UNTIL . condicion

    ID          desplazar e ir al estado 52
    CONST_INT   desplazar e ir al estado 53
    CONST_STR   desplazar e ir al estado 54
    CONST_REAL  desplazar e ir al estado 55
    OP_NOT      desplazar e ir al estado 56
    CAR_PA      desplazar e ir al estado 57
    BETWEEN     desplazar e ir al estado 27
